--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
 <h1>論文詳細</h1>
 <p>タイトル: <%= @article.title %></p>
-<p>テスト <%= @article.body %></p>
+<p><%= @article.body %></p>
+<%= link_to "編集", edit_article_path(@article) %>
