--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,8 +1,8 @@
 <h1>論文編集</h1>
 <%= form_with model: @article, local: true do |form| %>
-<p>論文タイトル</p>
-<%= form.text_field :title %>
-<p>本文</p>
+<p><%= form.label "論文タイトル" %></p>
+<p><%= form.text_field :title %></p>
+<p><%= form.label "本文" %></p>
 <%= form.text_area :body %><br>
 
 <%= form.submit "編集" %>
