--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,9 +1,13 @@
 <h1>論文編集</h1>
 <%= form_with model: @article, local: true do |form| %>
-<p><%= form.label "論文タイトル" %></p>
-<p><%= form.text_field :title %></p>
-<p><%= form.label "本文" %></p>
-<%= form.text_area :body %><br>
+<p>
+<%= form.label "論文タイトル" %><br>
+<%= form.text_field :title %>
+</p>
+<p>
+<%= form.label "本文" %><br>
+<%= form.text_area :body %>
+</p>
 
 <%= form.submit "編集" %>
 <% end %>
