--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+  <div class="jumbotron text-center" style="margin-bottom:0">
+  　<h1>タイトルを自分で考えて記入して下さい。</h1>
+    <p>説明文を自分で考えて記入して下さい。</p>
+  </div>
+    <%= render "shared/header" %>
+  
     <%= yield %>
   </body>
 </html>
