--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,15 @@
-<h1>論文一覧</h1>
-<% @articles.each do |article| %>
-  <p>
-    <%= link_to article.title, article %>
-  </p>
-<% end %>
+<div class="container ">
+  <div class="row">
+    <div class="col-md-12">
+      <h1><% @articles.each do |article| %></h1>
+      <%= article.created_at.strftime('%b%d,%Y') %>
+        <p>
+          <%= link_to article.title, article %>
+        </p>
+        
+      <% end %>
 
-<%= link_to "新規論文投稿", new_article_path %>
+      <%= link_to "新規論文投稿", new_article_path %>
+    </div>
+  </div>
+</div>
