--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,34 @@
   </head>
 
   <body>
-  <div class="jumbotron text-center" style="margin-bottom:0">
-  　<h1>タイトルを自分で考えて記入して下さい。</h1>
-    <p>説明文を自分で考えて記入して下さい。</p>
-  </div>
-    <%= render "shared/header" %>
+    <div class="jumbotron text-center" style="margin-bottom:0">
+    　<h1>プログラミング</h1>
+      <p>Ruby on Rails5</p>
+    </div>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <%= link_to "Articles", root_path, class: "navbar-brand" %>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to "New posts", new_article_path, class: "nav-link" %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10 my-5 pr-5 mr-5">
+          <%= yield %>
+        </div>
+        <div class="col-sm-1 bg-dark">
+        </div>
+        <div class="col-sm-1">
+        </div>
+      </div>
+    </div>
   
-    <%= yield %>
+    
   </body>
 </html>
