--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,14 @@
-<div class="container ">
-  <div class="row">
-    <div class="col-md-12">
-      <h1><% @articles.each do |article| %></h1>
-      <%= article.created_at.strftime('%b%d,%Y') %>
-        <p>
-          <%= link_to article.title, article %>
-        </p>
-        
-      <% end %>
 
-      <%= link_to "新規論文投稿", new_article_path %>
-    </div>
+<% @articles.each do |article| %>
+  <div class="mb-5">
+    <h3><%= article.title %></h3>
+    <h4 class="text-secondary"><%= article.created_at.strftime('%b %d,%Y') %></h4>
+    <p>
+      <%= article.body.truncate(100) %>
+    </p>
+    <p>
+      <%= link_to "More detail", article_path(article), class: "text-dark" %>
+    </p>
   </div>
-</div>
+<% end %>
+
