--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,10 @@
-<h1>論文詳細</h1>
-<p>タイトル: <%= @article.title %></p>
-<p><%= @article.body %></p>
-<%= link_to '一覧へ戻る', articles_path(@article) %>
-<%= link_to "編集", edit_article_path(@article) %>
-<%= link_to "削除", article_path(@article), method: :delete, data: {confirm: '削除してもよろしいですか?'} %>
+<h1>Article Detail</h1>
+<div class="card">
+  <h5 class="card-header"><%= @article.title %></h5>
+  <div class="card-body">
+    <p><%= @article.body %></p>
+    <%= link_to 'Articles', articles_path, class: "btn btn-dark mr-3" %>
+    <%= link_to "Edit", edit_article_path(@article),  class: "btn btn-dark mr-3" %>
+    <%= link_to "Delete", article_path(@article), class: "btn btn-dark mr-3", method: :delete, data: {confirm: '削除してもよろしいですか?'} %>
+</div>
+</div>
