--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,13 +1,17 @@
-<h1>新規論文投稿</h1>
+<h1>New Posts</h1>
 <%= form_with model: @article, local: true do |form| %>
-<p>
-  <%= form.label "論文タイトル" %><br>
-  <%= form.text_field :title %>
-</p>
-<p>
-  <%= form.label "本文" %><br>
-  <%= form.text_area :body %>
-</p>
+<div>
+  <div class="form-group">
+    <%= form.label "Title" %><br>
+    <p><%= form.text_field :title, class: "form-control" %></p>
+  </div>
+  <div class="form-group">
+    <%= form.label "Body" %><br>
+    <p><%= form.text_area :body, rows: 10, class: "form-control" %></p>
+  </div>
 
-<%= form.submit "投稿" %>
+  <p>
+    <%= form.submit "Submit", class: "btn btn-dark btn-block my-4" %>
+  </p>
+</div>  
 <% end %>
