--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 
   <body>
     <div class="jumbotron text-center" style="margin-bottom:0">
-    　<h1>プログラミング</h1>
-      <p>Ruby on Rails5</p>
+    　<h1>日常</h1>
+      <p>Life Style</p>
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -28,7 +28,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-9 my-5 pr-5 mr-5">
+        <div class="col-sm-10 my-5 pr-5 mr-5">
           <%= yield %>
         </div>
         <div class="col-sm-1 bg-dark">
