--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
   <div class="card-body">
     <p><%= @article.body %></p>
     <%= link_to 'Articles', articles_path, class: "btn btn-dark mr-3" %>
-    <%= link_to "Edit", edit_article_path(@article),  class: "btn btn-dark mr-3" %>
+    <%= link_to "Edit", edit_article_path,  class: "btn btn-dark mr-3" %>
     <%= link_to "Delete", article_path(@article), class: "btn btn-dark mr-3", method: :delete, data: {confirm: '削除してもよろしいですか?'} %>
   </div>
 </div>
