--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,7 @@
       <p>Life Style</p>
     </div>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <%= link_to "Articles", root_path, class: "navbar-brand" %>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <%= link_to "New posts", new_article_path, class: "nav-link" %>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <%= render "shared/header" %>
 
     <div class="container">
       <div class="row">
