--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-     <%= link_to 'Articles', articles_path(), class: "navbar-brand" %>
+     <%= link_to 'Articles', root_path, class: "navbar-brand" %>
      <div class="collapse navbar-collapse">
          <ul class="navbar-nav">
              <li class="nav-item">
